Quick fix on results text align

--- a/app/assets/stylesheets/components/_autocomplete.sass
+++ b/app/assets/stylesheets/components/_autocomplete.sass
@@ -27,6 +27,7 @@
 .autocomplete__results__item
   color: $titlegray
   font-weight: normal
+  text-align: left
   cursor: pointer
   border-color: $body-background
   border-width: 1px 0 0 0
